--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.2",
+    "antd-img-crop": "^4.2.0",
     "axios": "^0.26.1",
     "craco-less": "^2.0.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "http-proxy-middleware": "^2.0.4",
     "jsonp": "^0.2.1",
     "prop-types": "^15.8.1",
     "qweather-icons": "^1.1.1",
+    "rc-field-form": "^1.24.0",
+    "rc-virtual-list": "^3.4.6",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
