--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "admin_client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://H-ackers.github.io/Admin-Client",
   "dependencies": {
     "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.16.2",
@@ -10,9 +11,12 @@
     "antd": "^4.19.2",
     "antd-img-crop": "^4.2.0",
     "axios": "^0.26.1",
+    "bizcharts": "^4.1.15",
     "craco-less": "^2.0.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "echarts": "^5.3.2",
+    "echarts-for-react": "^3.0.2",
     "html-to-draftjs": "^1.5.0",
     "http-proxy-middleware": "^2.0.4",
     "jsonp": "^0.2.1",
@@ -37,7 +41,9 @@
     "start": "craco  start",
     "build": "craco  build",
     "test": "craco  test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -56,5 +62,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
